# mlc-flask-shell

./: README.md  pyproject.toml  requirements.txt  test_webapp.py
webapp/: main.py
webapp/templates/: app.html  index.html
